--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,5 +16,17 @@
     },
     "plugins": [
         "vue"
-    ]
+    ],
+    "settings": {
+        "import/resolver": {
+            "node": {
+                "extensions": [
+                    ".js",
+                    ".jsx",
+                    ".ts",
+                    ".tsx"
+                ]
+            }
+        }
+    }
 }
